--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
-# Xcode
-#
+## Arquivos do Mac
+*.DS_Store
+
+
+
+#### Xcode ####
+
+
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 ## Build generated
